[package]
name = "fern_ndarray_learn"
version = "0.1.0"
authors = ["star"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# array2
ndarray = "0.15.3"
ndarray-csv = "0.5.1" 
csv = "1.1.3"

log = "0.4"
fern = "0.6.0"
serial_test = "0.5.1"
